[gd_scene load_steps=4 format=2]

[ext_resource path="res://nick/nick.gd" type="Script" id=1]

[sub_resource type="SpriteFrames" id=1]
animations = [  ]

[sub_resource type="RectangleShape2D" id=2]

[node name="nick" type="KinematicBody2D"]
collision_layer = 256
collision_mask = 256
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.503495, 0.485587 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 5, 9 )
shape = SubResource( 2 )

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="WindupTimer" type="Timer" parent="."]

[node name="FloorCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 256

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]
[connection signal="timeout" from="WindupTimer" to="." method="_on_WindupTimer_timeout"]
